syntax = "proto3";
option java_multiple_files = true;
package com.example.inventoryService;

import "google/protobuf/timestamp.proto"; // Importing Google's timestamp.proto

message InventoryDTO {
  int64 id = 1;
  google.protobuf.Timestamp date = 2;
  string amount_excluding_gst = 3;
  string gst_rate = 4;
  string gst_amount = 5;
  string amount_including_gst = 6;
  string link = 7;
  DiscountedState discounted_state = 8;
  InventoryState inventory_state = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

enum DiscountedState {
  UNDISCOUNTED = 0;
  PARTIALLY_DISCOUNTED = 1;
  DISCOUNTED = 2;
}

enum InventoryState {
  DRAFT = 0;
  ACTIVELY_RAISING = 1;
  SETTLEMENT_PENDING = 2;
  SETTLEMENT_DONE = 3;
  COLLECTIONS_DUE = 4;
  DISBURSAL_PENDING = 5;
  DELETED = 6;
}

service InventoryService {
  rpc CreateInventory(CreateInventoryRequest) returns (CreateInventoryResponse);
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
  rpc DeleteInventory(DeleteInventoryRequest) returns (DeleteInventoryResponse);
  rpc GetInventoryWithFilter(Filters) returns (stream InventoryDTO);
}
message Filters{
  DiscountedState discountedState = 1;
  InventoryState inventoryState = 2;
}
message GetInventoryForInventoryStateRequest{
  InventoryState state = 1;
}
message CreateInventoryRequest {
  InventoryDTO inventory = 1;
}

message CreateInventoryResponse {
  InventoryDTO inventory = 1;
}

message GetInventoryRequest {
  int64 id = 1;
}

message GetInventoryResponse {
  InventoryDTO inventory = 1;
}

message UpdateInventoryRequest {
  int64 id = 1;
  InventoryDTO inventory = 2;
}

message UpdateInventoryResponse {
  InventoryDTO inventory = 1;
}

message DeleteInventoryRequest {
  int64 id = 1;
}

message DeleteInventoryResponse {
  string message = 1;
}
